--- a/css/app.css
+++ b/css/app.css
@@ -31,16 +31,36 @@ div.panel h2 {
 	height: 550px;
 	width: 300px;
 	overflow: hidden;
+	z-index: 1000;
 }
 
 div.panelGradient {
-position: absolute;
-top: 0px;
-left: 0px;
-height: 100%;
-width: 100%;
-background-color: white;
-background: -webkit-linear-gradient( rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100% );
-background: linear-gradient( rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100% );
-filter: alpha( Opacity=0, FinishOpacity=100, Style=1, StartX=0, StartY=0, FinishX=0, FinishY=500 );
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	height: 100%;
+	width: 100%;
+	background-color: white;
+	background: -webkit-linear-gradient( rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100% );
+	background: linear-gradient( rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100% );
+	filter: alpha( Opacity=0, FinishOpacity=100, Style=1, StartX=0, StartY=0, FinishX=0, FinishY=500 );
+}
+
+.view {
+	border: 1px solid red;
+}
+
+.navButton.selected {
+	text-decoration: underline;
+}
+
+.close {
+	background: url('icons2.png') no-repeat -493px -1255px;
+	width: 22px;
+	height: 22px;
+	text-indent: -1000px;
+	float: right;
+	top: 2px;
+	position: relative;
+	right: 3px;
 }
