--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,11 @@
 body {
 	padding: 10px;
 }
+
+#gameboard {
+	width: 925px;
+	position: relative;
+}
 div.button, div.navButton {
 	position: relative;
 	text-align: center;
@@ -18,6 +23,10 @@ div.button, div.navButton {
 	user-select: none;
 }
 
+.inner div {
+	margin-bottom: 10px;
+}
+
 div.navButton {
 	float: left;
 	margin-right: 10px;
@@ -27,7 +36,7 @@ div.panel {
 	border: 1px solid black;
 }
 
-div.panel h2 {
+div.panel h2, .eventTitle h2 {
 	background-color: #ececec;
 	padding-left: 5px;
 	font-size: 18px;
@@ -53,6 +62,60 @@ div.panelGradient {
 	background: linear-gradient( rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100% );
 	filter: alpha( Opacity=0, FinishOpacity=100, Style=1, StartX=0, StartY=0, FinishX=0, FinishY=500 );
 }
+
+.eventPanel {
+	background: none repeat scroll 0 0 white;
+	border: 2px solid transparent;
+	left: 250px;
+	padding: 5px;
+	position: absolute;
+	top: 90px;
+	width: 335px;
+	z-index: 20;
+}
+
+.eventPanel:before {
+	background-color: white;
+	opacity: 0.6;
+	content: " ";
+	height: 700px;
+	left: -252px;
+	position: absolute;
+	top: -100px;
+	width: 1024px;
+	z-index: -2;
+}
+
+.eventPanel:after {
+	position: absolute;
+	top: -2px;
+	left: -2px;
+	width: 100%;
+	height: 100%;
+	content: " ";
+	border: 2px solid black;
+	box-shadow: 5px 5px 5px #666666;
+	z-index: -2;
+}
+
+.eventTitle {
+/*display: inline-block;*/
+font-weight: bold;
+/*position: absolute;*/
+/*top: -12px;*/
+}
+
+/*.eventTitle:after {
+background-color: white;
+bottom: 32%;
+content: " ";
+height: 5px;
+left: 0;
+position: absolute;
+width: 100%;
+z-index: -1;
+}*/
+
 
 #viewSlider {
 	width: 100%;
