--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,17 @@ body {
 	width: 925px;
 	position: relative;
 }
+
+#buttons {
+	float: right;
+	margin-top: 30px;
+}
+#buttons:before {
+	content:"";
+	display: block;
+	margin-top: 30px;
+}
+
 div.button, div.navButton {
 	position: relative;
 	text-align: center;
@@ -13,7 +24,7 @@ div.button, div.navButton {
 	width: 100px;
 	height: 25px;
 	margin-bottom: 5px;
-	padding: 5px 10px;
+	padding: 7px 10px 3px 10px;
 	cursor: pointer;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -21,15 +32,12 @@ div.button, div.navButton {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	float: left;
+	margin-right: 10px;
 }
 
 .inner div {
 	margin-bottom: 10px;
-}
-
-div.navButton {
-	float: left;
-	margin-right: 10px;
 }
 
 div.panel {
@@ -40,27 +48,85 @@ div.panel h2, #event .title h2 {
 	background-color: #ececec;
 	padding-left: 5px;
 	font-size: 18px;
+	color: black;
 }
 
-#log {
+#terminal {
 	word-wrap: break-word;
 	max-height: 550px;
-	height: 100%;
-	width: 300px;
+	height: 200px;
+	/*width: 100%;*/
 	overflow: hidden;
 	z-index: 1000;
 }
+	#terminal .desc {
+		padding: 10px;
+		display: block;
+	}
 
-div.panelGradient {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	height: 100%;
+#other {
+	/*border: none !important;*/
+	height: 300px;
+	padding: 20px;
+	width: 900px;
+}
+
+	#viewSlider {
+		width: 100%;
+		overflow: hidden;
+	}
+
+.view {
+	float: left;
+	position: relative;
 	width: 100%;
-	background-color: white;
-	background: -webkit-linear-gradient( rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100% );
-	background: linear-gradient( rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100% );
-	filter: alpha( Opacity=0, FinishOpacity=100, Style=1, StartX=0, StartY=0, FinishX=0, FinishY=500 );
+	left: 100%;
+}
+
+.view.active {
+	left: 0;
+}
+
+.navButton.selected {
+	text-decoration: underline;
+}
+
+.close {
+	background: url('icons2.png') no-repeat -493px -1255px;
+	width: 22px;
+	height: 22px;
+	text-indent: -1000px;
+	float: right;
+	top: 2px;
+	position: relative;
+	right: 3px;
+}
+
+/* test */
+.view{left:-100%;height:0;overflow:hidden;z-index:1;-webkit-transition-property:left,height;-moz-transition-property:left,height;-ms-transition-property:left,height;-o-transition-property:left,height;transition-property:left,height;-webkit-transition-duration:333ms;-moz-transition-duration:333ms;-ms-transition-duration:333ms;-o-transition-duration:333ms;transition-duration:333ms;-webkit-transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);-moz-transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);-ms-transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);-o-transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);-webkit-transform:translate3d(0,0,0);-moz-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);-o-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}
+.view.active{left:0;height:auto;overflow:visible;z-index:2}
+.view.active ~ .view{left:100%}
+.view.active ~ .view.active{left:0}
+
+/* split */
+.locator .panel {
+	width: 49%;
+	float: left;
+	margin-right: 5px;
+}
+.locator .panel .button {
+	margin-left: 5px;
+}
+
+
+/* Modals */
+#modal {
+
+}
+
+#modal #message p {
+	width: 90%;
+	margin: 0 auto;
 }
 
 .eventPanel {
@@ -98,54 +164,57 @@ div.panelGradient {
 	z-index: -2;
 }
 
-
-#viewSlider {
-	width: 100%;
-	overflow: hidden;
-}
-#other {
-	border: none !important;
-}
-
-.view {
-	/*border: 1px solid red;*/
-	float: left;
-	position: relative;
-	width: 100%;
-	left: 100%;
+.fighter {
+	/*float: left;*/
+	position: absolute;
+	padding: 5px;
+	border: 1px solid black;
+	bottom:55px;
+	text-align: center;
+	width:50px;
 }
 
-.view.active {
-	left: 0;
+#player { left: 25%; }
+#monster { right: 25%; }
+
+
+/*****************/
+/* Color Schemes */
+/*****************/
+
+/* High Contrast */
+body.hc_color {
+	background-color: black;
+	color: #00ff00;
+	font-family: 'Courier New', 'Courier New', monospace;
 }
 
-.navButton.selected {
-	text-decoration: underline;
+.hc_color div.panel h2, .hc_color #event .title h2 {
+	background-color: #00ff00;
 }
 
-.close {
-	background: url('icons2.png') no-repeat -493px -1255px;
-	width: 22px;
-	height: 22px;
-	text-indent: -1000px;
-	float: right;
-	top: 2px;
-	position: relative;
-	right: 3px;
+.hc_color div.button, .hc_color div.navButton {
+	border: 1px solid #00ff00;
 }
 
-/* test */
-.view{left:-100%;height:0;overflow:hidden;z-index:1;-webkit-transition-property:left,height;-moz-transition-property:left,height;-ms-transition-property:left,height;-o-transition-property:left,height;transition-property:left,height;-webkit-transition-duration:333ms;-moz-transition-duration:333ms;-ms-transition-duration:333ms;-o-transition-duration:333ms;transition-duration:333ms;-webkit-transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);-moz-transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);-ms-transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);-o-transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);transition-timing-function:cubic-bezier(0.1,0.7,0.7,1);-webkit-transform:translate3d(0,0,0);-moz-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);-o-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}
-.view.active{left:0;height:auto;overflow:visible;z-index:2}
-.view.active ~ .view{left:100%}
-.view.active ~ .view.active{left:0}
-
-/* split */
-.locator .panel {
-	width: 40%;
-	float: left;
-	margin-right: 5px;
+.hc_color div.panel {
+	border: 1px solid #00ff00;
 }
-.locator .panel .button {
-	margin-left: 5px;
+
+/* Inverse */
+body.inverse_color {
+	background-color: black;
+	color: white;
+}
+
+.inverse_color div.panel h2, .inverse_color #event .title h2 {
+	background-color: white;
+}
+
+.inverse_color div.button, .inverse_color div.navButton {
+	border: 1px solid white;
+}
+
+.inverse_color div.panel {
+	border: 1px solid white;
 }
